--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "openai": "^5.23.1"
   }
 }
