--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "nodemon": "^3.1.10",
-    "openai": "^5.23.1"
+    "openai": "^5.23.1",
+    "zod": "^3.25.76"
   }
 }
